--- a/app/src/main/res/layout/fragment_line_general.xml
+++ b/app/src/main/res/layout/fragment_line_general.xml
@@ -55,7 +55,6 @@
                     android:layout_gravity="center_vertical"
                     android:text="SHIP FROM"
                     style="@style/SectionText"
-                    android:textColor="@color/grey"
                     android:textIsSelectable="false"
                    />
             </LinearLayout>
@@ -138,17 +137,24 @@
                         android:layout_height="wrap_content"
                         style="@style/FieldLabels"
                         android:text="STATE"
-                        />
-
+                        android:layout_marginBottom="3dip"
+                    />
+                <RelativeLayout android:layout_width="100dip"
+                                android:layout_height="wrap_content">
                     <Spinner
-                        android:id="@+id/state"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dip"
-                        android:background="@android:drawable/btn_dropdown"
+                            android:id="@+id/state"
+                          style="@style/SpinnerStyle"
+                    />
+                    <ImageView android:layout_width="20dip"
+                               android:padding="6dp"
+                               android:layout_alignParentRight="true"
+                               android:layout_centerVertical="true"
+                               android:src="@drawable/arrow_down_blue"
+                               android:layout_height="20dip"/>
 
-                        android:textColor="@color/grey"
-                         />
+                </RelativeLayout>
 
+c
                 </LinearLayout>
 
 
@@ -255,7 +261,7 @@
 
 
             </LinearLayout>
-
+<!--
             <View
                     style="@style/SectionDivider"/>
 
@@ -296,10 +302,11 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="0.5"
+                        android:id="@+id/add_client"
                         android:orientation="vertical">
 
                         <ImageView
-                            android:id="@+id/add_client"
+
                             android:layout_width="30dp"
                             android:layout_height="40dp"
                             android:layout_gravity="right"
@@ -329,18 +336,10 @@
                         android:layout_marginRight="10dp"
                         android:src="@drawable/avatar_profile" />
 
-                    <!--<TextView-->
-                        <!--android:layout_width="40dp"-->
-                        <!--android:layout_height="40dp"-->
-                        <!--android:layout_marginRight="10dp"-->
-                        <!--android:background="@drawable/line_circle"-->
-                        <!--android:gravity="center_vertical|center_horizontal"-->
-                        <!--android:text="+3"-->
-                        <!--android:textColor="@color/button_bg" />-->
 
                 </LinearLayout>
 
-            </LinearLayout>
+            </LinearLayout> -->
 
             <LinearLayout
                 android:layout_width="fill_parent"
