--- a/app/src/main/res/layout/my_spinner_item.xml
+++ b/app/src/main/res/layout/my_spinner_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@android:id/text1"
+          android:id="@+id/cust_view"
           android:layout_width="match_parent"
-          android:layout_height="30dip"
-          style="@style/EditTextStyle"
+          android:layout_height="36dip"
 
-          android:layoutDirection="ltr"
+          android:gravity="center_vertical|left"
+android:background="@android:color/transparent"
           android:singleLine="true"
-          android:padding="0dp"
+          android:padding="2dp"
           android:textColor="@color/grey" />
