--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,12 @@
         <item name="android:textColor">@color/white</item>
 
     </style>
+    <style name="MyEditTextStyle"  parent="AppEditTextStyle">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
     <style name="HeadingText" parent="RobotoTextViewStyle">
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
@@ -67,7 +73,7 @@
         <item name="android:textStyle">normal</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:textColor">@color/tw__light_gray</item>
+        <item name="android:textColor">@color/grey</item>
     </style>
     <style name="FieldLabels" parent="RobotoTextViewStyle">
         <item name="android:textSize">11sp</item>
@@ -88,7 +94,7 @@
         <item name="android:paddingTop">8dip</item>
         <item name="android:paddingBottom">8dip</item>
         <item name="android:paddingLeft">20dip</item>
-        <item name="android:paddingRight">20dip</item>
+        <item name="android:paddingRight">5dip</item>
         <item name="android:layout_marginTop">8dip</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
@@ -98,6 +104,31 @@
         <item name="android:layout_marginTop">3dip</item>
         <item name="android:layout_height">1dip</item>
         <item name="android:layout_width">1dip</item>
+    </style>
+
+    <style name="SpinnerStyle" parent="AppTheme">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">30dip</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:gravity">top</item>
+        <item name="android:padding">0dip</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:textColor">@color/grey</item>
+    </style>
+
+    <style name="SearchEditText" parent="AppTheme">
+        <item name="android:background">@drawable/curve_editext</item>
+        <item name="android:drawableLeft">@android:drawable/ic_menu_search</item>
+
+        <item name="android:paddingBottom">2dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColorHint">@android:color/darker_gray</item>
+        <item name="android:textSize">13sp</item>
     </style>
 
     <!--<style name="Widget.CalendarView.Custom" parent="android:Widget.CalendarView">-->
