--- a/app/src/main/res/layout/fragment_sign_up_home_address.xml
+++ b/app/src/main/res/layout/fragment_sign_up_home_address.xml
@@ -79,7 +79,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
-                        android:text="107 Liasu Road"
+                        android:text=""
                         android:gravity="center"
                         android:inputType="text"
                         android:layout_toRightOf="@+id/txt_address_label"
@@ -129,7 +129,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
-                        android:text="Idimu"
+                        android:text=""
                         android:gravity="center"
                         android:inputType="text"
                         android:layout_toRightOf="@+id/txt_city_label"
@@ -160,7 +160,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
-                        android:text="Lagos"
+                        android:text=""
                         android:gravity="center"
                         android:inputType="text"
                         android:layout_toRightOf="@+id/txt_state_label"
@@ -212,7 +212,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
-                        android:text="100276"
+                        android:text=""
                         android:gravity="center"
                         android:inputType="number"
                         android:layout_toRightOf="@+id/txt_zipcode_label"
