--- a/app/src/main/res/layout/main_activity_drawer_header.xml
+++ b/app/src/main/res/layout/main_activity_drawer_header.xml
@@ -242,6 +242,22 @@
 
         </RelativeLayout>
 
+        <RelativeLayout
+            android:id="@+id/logout"
+            style="@style/DrawerMenuItem"
+            android:onClick="onClick">
+            <ImageView
+                style="@style/DrawerMenuIcon"
+                android:src="@android:drawable/ic_lock_power_off"
+                android:alpha="0.1"
+                />
+            <TextView android:layout_width="wrap_content"
+                android:text="Log out"
+                style="@style/DrawerMenuText"
+                android:layout_height="wrap_content"/>
+
+        </RelativeLayout>
+
     </LinearLayout>
 </ScrollView>
     </merge>
