--- a/app/src/main/res/layout/fragment_sign_up_add_boss.xml
+++ b/app/src/main/res/layout/fragment_sign_up_add_boss.xml
@@ -437,6 +437,7 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:gravity="center_vertical"
+            android:onClick="profileButtonClicked"
             android:id="@+id/profile_layout">
 
             <de.hdodenhof.circleimageview.CircleImageView
