--- a/app/src/main/res/layout/fragment_sign_up_name.xml
+++ b/app/src/main/res/layout/fragment_sign_up_name.xml
@@ -159,6 +159,7 @@
 
         <LinearLayout
             android:id="@+id/profile_layout"
+            android:onClick="profileButtonClicked"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
