--- a/app/src/main/res/layout/fragment_sign_up_co_worker_count.xml
+++ b/app/src/main/res/layout/fragment_sign_up_co_worker_count.xml
@@ -156,6 +156,7 @@
         android:layout_alignParentBottom="true">
 
         <LinearLayout
+            android:onClick="profileButtonClicked"
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
