--- a/app/src/main/res/layout/fragment_sign_up_group_desc.xml
+++ b/app/src/main/res/layout/fragment_sign_up_group_desc.xml
@@ -104,11 +104,11 @@
         android:layout_alignParentBottom="true">
 
         <LinearLayout
+            android:onClick="profileButtonClicked"
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:onClick=""
             android:background="@color/white"
             android:gravity="center_vertical"
             android:id="@+id/profile_layout">
