--- a/app/src/main/res/layout/fragment_sign_up_territory.xml
+++ b/app/src/main/res/layout/fragment_sign_up_territory.xml
@@ -70,6 +70,7 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="profileButtonClicked"
             android:background="@color/white"
             android:gravity="center_vertical"
             android:id="@+id/profile_layout">
