--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:fitsSystemWindows="true"
-
-                                        tools:context=".MainActivity">
+                                        tools:context=".ui.activities.MainActivity">
 <RelativeLayout
     android:orientation="vertical"
     android:id="@+id/parent_layout"
