- added line, modified signup

--- a/app/src/main/res/layout/fragment_line_revenue.xml
+++ b/app/src/main/res/layout/fragment_line_revenue.xml
@@ -27,11 +27,12 @@
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="REVENUE INFO"
+                    android:text="REVENUE"
                     style="@style/SectionText" />
                 <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:id="@+id/add_revenue"
                         android:orientation="vertical">
 
                     <ImageView
@@ -155,7 +156,7 @@
 
         </LinearLayout>
 
-
+<!--
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
@@ -188,5 +189,5 @@
             android:layout_marginRight="10dp" />
 
     </RelativeLayout>
-
+-->
 </RelativeLayout>
