--- a/app/src/main/res/layout/fragment_sign_up_name.xml
+++ b/app/src/main/res/layout/fragment_sign_up_name.xml
@@ -164,6 +164,7 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:gravity="center_vertical"
+            android:onClick="onClick"
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
