--- a/app/src/main/res/layout/fragment_sign_up_picture.xml
+++ b/app/src/main/res/layout/fragment_sign_up_picture.xml
@@ -93,9 +93,10 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:onClick="profileButtonClicked"
+
             android:background="@color/white"
             android:gravity="center_vertical"
+            android:onClick="onClick"
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
