--- a/app/src/main/res/layout/fragment_sign_up_add_boss_now.xml
+++ b/app/src/main/res/layout/fragment_sign_up_add_boss_now.xml
@@ -72,6 +72,7 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:gravity="center_vertical"
+            android:onClick="onClick"
             android:id="@+id/profile_layout">
 
             <de.hdodenhof.circleimageview.CircleImageView
