--- a/app/src/main/res/layout/fragment_sign_up_co_worker_count.xml
+++ b/app/src/main/res/layout/fragment_sign_up_co_worker_count.xml
@@ -161,6 +161,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/white"
+            android:onClick="onClick"
             android:gravity="center_vertical"
             android:id="@+id/profile_layout">
 
