--- a/app/src/main/res/layout/dialog_data_list_item.xml
+++ b/app/src/main/res/layout/dialog_data_list_item.xml
@@ -15,19 +15,19 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:id="@+id/img_industry"
+            android:id="@+id/img_data"
             android:layout_marginRight="5dp"
             android:layout_centerVertical="true" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/txt_industry"
+            android:id="@+id/txt_data"
             android:textColor="@color/schedule_title_bg_color"
             android:maxLines="1"
             android:textSize="16sp"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/img_industry"
+            android:layout_toRightOf="@+id/img_data"
             android:layout_marginLeft="15dp" />
 
     </RelativeLayout>
