--- a/app/src/main/res/layout/dialog_select_data.xml
+++ b/app/src/main/res/layout/dialog_select_data.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white2"
     android:orientation="vertical">
 
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="320dp"
         android:scrollbars="none"
         android:paddingTop="10dp"/>
 
@@ -25,9 +25,9 @@
             android:layout_height="50dp"
             android:gravity="center_horizontal|center_vertical"
             android:background="@drawable/bottom_curve_white_background"
-            android:text="CLOSE"
+            android:text="OK"
             android:textStyle="bold"
-            android:textColor="@color/schedule_title_bg_color"
+            android:textColor="@color/button_bg"
             android:textSize="16sp" />
 
 
