--- a/app/src/main/res/layout/fragment_schedule_clients_suggestions.xml
+++ b/app/src/main/res/layout/fragment_schedule_clients_suggestions.xml
@@ -171,14 +171,21 @@
                 android:textColor="@color/schedule_title_bg_color"
                 android:textSize="18sp" />
 
-
-            <ListView
-                android:id="@+id/list"
-                android:layout_below="@+id/upper_layout"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:listSelector="@android:color/transparent"
-                android:scrollbars="none" />
+                android:id="@+id/should_visit"
+                android:orientation="vertical">
+            </LinearLayout>
+
+
+            <!--<ListView-->
+                <!--android:id="@+id/list"-->
+                <!--android:layout_below="@+id/upper_layout"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:listSelector="@android:color/transparent"-->
+                <!--android:scrollbars="none" />-->
             <!--<android.support.v7.widget.RecyclerView-->
                 <!--android:id="@+id/list"-->
                 <!--android:layout_below="@+id/upper_layout"-->
