--- a/app/src/main/res/layout/schedule_clients_suggestion_list_item.xml
+++ b/app/src/main/res/layout/schedule_clients_suggestion_list_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/should_visit_list_item"
     android:orientation="vertical">
 
     <RelativeLayout
