--- a/app/src/main/res/layout/activity_client_layout.xml
+++ b/app/src/main/res/layout/activity_client_layout.xml
@@ -33,30 +33,58 @@
         <LinearLayout
                 android:id="@+id/back_layout"
                 android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_centerVertical="true"
                 android:padding="10dp"
+                android:onClick="goBack"
                 android:orientation="horizontal">
 
             <ImageView
                     android:id="@+id/img_close"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_gravity="center"
                     android:layout_marginLeft="0dp"
                     android:src="@drawable/btn_close" />
 
         </LinearLayout>
 
+        <LinearLayout android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:id="@+id/search_but"
+                      android:layout_centerVertical="true"
+                      android:layout_toLeftOf="@+id/filter"
+                      android:layout_marginRight="20dp"
+        >
+            <ImageView
+
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+
+
+
+                    android:src="@drawable/ic_search" />
+
+        </LinearLayout>
+        <LinearLayout android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:id="@+id/filter"
+                      android:layout_marginRight="10dp"
+                      android:layout_alignParentRight="true"
+                      android:layout_centerVertical="true"
+        >
         <ImageView
-                android:id="@+id/img_done"
-                android:layout_width="35dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="15dp"
-                android:src="@drawable/checkmark" />
+
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_filter_map" />
+        </LinearLayout>
 
     </RelativeLayout>
+    <FrameLayout
+               android:id="@+id/fragment_container"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>
 
 </LinearLayout>
