--- a/app/src/main/res/layout/main_activity_drawer_header.xml
+++ b/app/src/main/res/layout/main_activity_drawer_header.xml
@@ -33,14 +33,14 @@
                       android:id="@+id/full_name_tv"
                       android:layout_marginTop="30dp"
                       android:layout_centerHorizontal="true"
-                      android:textColor="@color/grey"
+                      android:textColor="@color/white"
                       android:textSize="20sp"
                       android:layout_alignParentTop="true"
                       android:layout_height="wrap_content"/>
             <TextView android:layout_width="wrap_content"
                       android:text="emily@dobson.com"
                       android:id="@+id/email_tv"
-                      android:textColor="@color/grey"
+                      android:textColor="@color/white"
                       android:layout_below="@+id/full_name_tv"
                       android:layout_centerHorizontal="true"
                       android:layout_height="wrap_content"/>
@@ -91,7 +91,7 @@
                 android:onClick="onClick"
                 android:id="@+id/subscription_menu"
                 style="@style/DrawerMenuItem"
-                android:background="@color/white"
+                android:background="@color/semi_transparent_black"
         >
             <ImageView
                     style="@style/DrawerMenuIcon"
@@ -108,7 +108,7 @@
                       android:textStyle="bold"
 
                       android:id="@+id/package_name"
-                      android:textColor="@color/grey"
+                      android:textColor="@color/white"
                       android:layout_height="wrap_content"/>
             <TextView android:layout_width="wrap_content"
                       android:text="Expires in 20 days"
