--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,7 +26,7 @@
     <color name="grey">#32323A</color>
     <color name="light_gray">#DAE1E4</color>
     <color name="light_gray2">#BBBBBB</color>
-    <color name="drawer_background">@color/light_gray</color>
+    <color name="drawer_background">#203049</color>
 
     <color name="red_color">#ff1414</color>
     <color name="orange_color">#feb414</color>
