--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,8 +13,8 @@
     <dimen name="tab_height">48dp</dimen>
 
     <dimen name="pager_margin">-30dp</dimen>
-    <dimen name="action_bar_icon_height">35dip</dimen>
-    <dimen name="action_bar_icon_padding">5dip</dimen>
-    <dimen name="action_bar_height">50dip</dimen>
+    <dimen name="action_bar_icon_height">35dp</dimen>
+    <dimen name="action_bar_icon_padding">5dp</dimen>
+    <dimen name="action_bar_height">50dp</dimen>
 </resources>
 
