--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -148,7 +148,7 @@
             </style>
 
     <style name="DrawerMenuText" parent="AppTheme">
-        <item name="android:textColor">@color/grey</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:layout_marginLeft">60dp</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_centerVertical">true</item>
