--- a/app/src/main/res/layout/fragment_sign_up_verify_code.xml
+++ b/app/src/main/res/layout/fragment_sign_up_verify_code.xml
@@ -349,6 +349,7 @@
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="64dp"
+        android:visibility="gone"
         android:background="@color/alert_bg_color"
         android:gravity="center_vertical|center_horizontal"
         android:id="@+id/alert_valid">
