--- a/app/src/main/res/layout/activity_swipe_select_client.xml
+++ b/app/src/main/res/layout/activity_swipe_select_client.xml
@@ -51,34 +51,6 @@
         android:paddingBottom="5dp">
 
         <LinearLayout
-            android:id="@+id/tab_map"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:gravity="bottom"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/txt_map"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
-                android:text="MAP"
-                android:textColor="@color/semi_transparent_black"
-                android:textSize="13sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/map_indicator"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/button_bg" />
-
-        </LinearLayout>
-
-        <LinearLayout
             android:id="@+id/tab_last_visited"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
@@ -130,6 +102,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:background="@color/button_bg" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/tab_alpha"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.2"
+            android:gravity="bottom"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txt_alpha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="10dp"
+                android:text="ALPHABETICAL"
+                android:textColor="@color/semi_transparent_black"
+                android:textSize="13sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/alpha_indicator"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/button_bg" />
+
         </LinearLayout>
 
 
