--- a/app/src/main/res/layout/fragment_sign_up_co_worker_count.xml
+++ b/app/src/main/res/layout/fragment_sign_up_co_worker_count.xml
@@ -161,7 +161,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/white"
-            android:onClick="onClick"
+            android:onClick="profileButtonClicked"
             android:gravity="center_vertical"
             android:id="@+id/profile_layout">
 
@@ -208,7 +208,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/str_continue"
+                    android:text="FINISH"
                     android:id="@+id/txt_continue_label"
                     android:textSize="15dp"
                     android:textColor="@color/white"
@@ -218,7 +218,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="15/20"
+                    android:text="15/15"
                     android:id="@+id/textView"
                     android:layout_below="@+id/txt_continue_label"
                     android:layout_centerInParent="true" />
