--- a/app/src/main/res/layout/fragment_sign_up_name.xml
+++ b/app/src/main/res/layout/fragment_sign_up_name.xml
@@ -164,7 +164,7 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:gravity="center_vertical"
-            android:onClick="onClick"
+            android:onClick="profileButtonClicked"
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -222,7 +222,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="4/20"
+                    android:text="4/15"
                     android:id="@+id/stage"
                     android:layout_below="@+id/txt_continue_label"
                     android:layout_centerInParent="true" />
