--- a/app/src/main/res/layout/fragment_sign_up_office_address.xml
+++ b/app/src/main/res/layout/fragment_sign_up_office_address.xml
@@ -293,7 +293,7 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:onClick="onClick"
+            android:onClick="profileButtonClicked"
             android:background="@color/white"
             android:gravity="center_vertical"
             android:orientation="horizontal">
@@ -353,7 +353,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="7/20"
+                    android:text="7/15"
                     android:id="@+id/stage"
                     android:layout_below="@+id/txt_continue_label"
                     android:layout_centerInParent="true" />
