--- a/app/src/main/res/layout/fragment_sign_up_picture.xml
+++ b/app/src/main/res/layout/fragment_sign_up_picture.xml
@@ -93,10 +93,9 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-
             android:background="@color/white"
             android:gravity="center_vertical"
-            android:onClick="onClick"
+            android:onClick="profileButtonClicked"
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -154,7 +153,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="3/20"
+                    android:text="3/15"
                     android:id="@+id/stage"
                     android:layout_below="@+id/txt_continue_label"
                     android:layout_centerInParent="true" />
