--- a/app/src/main/res/layout/territory_list_item.xml
+++ b/app/src/main/res/layout/territory_list_item.xml
@@ -42,7 +42,7 @@
             </EditText>
 
             <TextView
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/txt_item_territory"
                 android:layout_marginLeft="20dp"
